Istio/example-app/example-app-chart/templates/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    #enable injection of Istio sidecar to all pods in this namespace
    istio-injection: enabled
