Istio/example-app/example-app-chart/templates/05-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: staging
spec:
  containers:
    - name: client
      image: alpine/curl:latest
      command: ["/bin/sh", "-c", "while true; do curl -s http://first-app:8080/api/devices && echo '' && sleep 1; done"]
