Istio/example-app/example-app-chart/templates/07-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: first-app
  namespace: staging
spec:
  hosts:
    - first-app
  http:
    - route:
        - destination:
            host: first-app
            subset: v1
          weight: 20
        - destination:
            host: first-app
            subset: v2
          weight: 80
